--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -1252,8 +1252,426 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "c2584ad6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_posted_date</th>\n",
+       "      <th>company_address_locality</th>\n",
+       "      <th>company_address_region</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>company_website</th>\n",
+       "      <th>company_description</th>\n",
+       "      <th>job_description_text</th>\n",
+       "      <th>seniority_level</th>\n",
+       "      <th>job_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-04-09</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Adobe</td>\n",
+       "      <td>http://www.adobe.com</td>\n",
+       "      <td>Adobe is the global leader in digital media an...</td>\n",
+       "      <td>Our CompanyChanging the world through digital ...</td>\n",
+       "      <td>Entry level</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-03-22</td>\n",
+       "      <td>Mountain View</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Waymo</td>\n",
+       "      <td>https://waymo.com/careers/</td>\n",
+       "      <td>On the journey to be the world's most trusted ...</td>\n",
+       "      <td>Waymo is an autonomous driving technology comp...</td>\n",
+       "      <td>Entry level</td>\n",
+       "      <td>Machine Learning Engineer, Training</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-03-28</td>\n",
+       "      <td>Boston</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>HMH</td>\n",
+       "      <td>http://www.hmhco.com</td>\n",
+       "      <td>We are an adaptive learning company that empow...</td>\n",
+       "      <td>Job Title: Machine Learning EngineerLocation: ...</td>\n",
+       "      <td>Mid-Senior level</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2025-04-02</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Adobe</td>\n",
+       "      <td>http://www.adobe.com</td>\n",
+       "      <td>Adobe is the global leader in digital media an...</td>\n",
+       "      <td>Our CompanyChanging the world through digital ...</td>\n",
+       "      <td>Internship</td>\n",
+       "      <td>2025 Intern - Machine Learning Engineer AI/ML</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2025-03-25</td>\n",
+       "      <td>Deerfield</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Walgreens</td>\n",
+       "      <td>http://www.walgreens.com</td>\n",
+       "      <td>Walgreens (www.walgreens.com) is included in t...</td>\n",
+       "      <td>Job SummaryApplies advanced data analysis tool...</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>Data Scientist - Healthcare &amp; Clinical Data (R...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>992</th>\n",
+       "      <td>2025-04-03</td>\n",
+       "      <td>Menlo Park</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Meta</td>\n",
+       "      <td>https://www.metacareers.com/</td>\n",
+       "      <td>Meta's mission is to build the future of human...</td>\n",
+       "      <td>Reality Labs at Meta is building products that...</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>Software Engineer, Computer Vision - Reality Labs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>993</th>\n",
+       "      <td>2025-04-01</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>The Lab Consulting</td>\n",
+       "      <td>http://www.thelabconsulting.com</td>\n",
+       "      <td>The Lab is a management consulting firm that h...</td>\n",
+       "      <td>We are a mid-sized Management Consulting, Auto...</td>\n",
+       "      <td>Mid-Senior level</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>994</th>\n",
+       "      <td>2025-04-02</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>FanDuel</td>\n",
+       "      <td>https://www.fanduel.careers/</td>\n",
+       "      <td>FanDuel Group is an innovative sports-tech ent...</td>\n",
+       "      <td>About FanduelFanDuel Group is the premier mobi...</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>Software Engineer - React</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>2025-04-01</td>\n",
+       "      <td>Mountain View</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>X, The Moonshot Factory</td>\n",
+       "      <td>https://x.company</td>\n",
+       "      <td>We create breakthrough technologies to help so...</td>\n",
+       "      <td>About The TeamTapestry, is X’s moonshot for th...</td>\n",
+       "      <td>Mid-Senior level</td>\n",
+       "      <td>Machine Learning Engineer, Tapestry</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>2025-02-03</td>\n",
+       "      <td>Watertown</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>Tutor Intelligence</td>\n",
+       "      <td>https://tutorintelligence.com/</td>\n",
+       "      <td>Tutor Intelligence is a full-service robotics ...</td>\n",
+       "      <td>The Company:Tutor Intelligence is a startup bu...</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>Robotics Machine Learning Engineer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>995 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    job_posted_date company_address_locality company_address_region  \\\n",
+       "2        2025-04-09                 San Jose                     CA   \n",
+       "3        2025-03-22            Mountain View             California   \n",
+       "4        2025-03-28                   Boston          Massachusetts   \n",
+       "5        2025-04-02                 San Jose                     CA   \n",
+       "6        2025-03-25                Deerfield                     IL   \n",
+       "..              ...                      ...                    ...   \n",
+       "992      2025-04-03               Menlo Park                     CA   \n",
+       "993      2025-04-01                  Houston                  Texas   \n",
+       "994      2025-04-02                 New York                     NY   \n",
+       "995      2025-04-01            Mountain View                     CA   \n",
+       "996      2025-02-03                Watertown          Massachusetts   \n",
+       "\n",
+       "                company_name                  company_website  \\\n",
+       "2                      Adobe             http://www.adobe.com   \n",
+       "3                      Waymo       https://waymo.com/careers/   \n",
+       "4                        HMH             http://www.hmhco.com   \n",
+       "5                      Adobe             http://www.adobe.com   \n",
+       "6                  Walgreens         http://www.walgreens.com   \n",
+       "..                       ...                              ...   \n",
+       "992                     Meta     https://www.metacareers.com/   \n",
+       "993       The Lab Consulting  http://www.thelabconsulting.com   \n",
+       "994                  FanDuel     https://www.fanduel.careers/   \n",
+       "995  X, The Moonshot Factory                https://x.company   \n",
+       "996       Tutor Intelligence   https://tutorintelligence.com/   \n",
+       "\n",
+       "                                   company_description  \\\n",
+       "2    Adobe is the global leader in digital media an...   \n",
+       "3    On the journey to be the world's most trusted ...   \n",
+       "4    We are an adaptive learning company that empow...   \n",
+       "5    Adobe is the global leader in digital media an...   \n",
+       "6    Walgreens (www.walgreens.com) is included in t...   \n",
+       "..                                                 ...   \n",
+       "992  Meta's mission is to build the future of human...   \n",
+       "993  The Lab is a management consulting firm that h...   \n",
+       "994  FanDuel Group is an innovative sports-tech ent...   \n",
+       "995  We create breakthrough technologies to help so...   \n",
+       "996  Tutor Intelligence is a full-service robotics ...   \n",
+       "\n",
+       "                                  job_description_text   seniority_level  \\\n",
+       "2    Our CompanyChanging the world through digital ...       Entry level   \n",
+       "3    Waymo is an autonomous driving technology comp...       Entry level   \n",
+       "4    Job Title: Machine Learning EngineerLocation: ...  Mid-Senior level   \n",
+       "5    Our CompanyChanging the world through digital ...        Internship   \n",
+       "6    Job SummaryApplies advanced data analysis tool...    Not Applicable   \n",
+       "..                                                 ...               ...   \n",
+       "992  Reality Labs at Meta is building products that...    Not Applicable   \n",
+       "993  We are a mid-sized Management Consulting, Auto...  Mid-Senior level   \n",
+       "994  About FanduelFanDuel Group is the premier mobi...          Director   \n",
+       "995  About The TeamTapestry, is X’s moonshot for th...  Mid-Senior level   \n",
+       "996  The Company:Tutor Intelligence is a startup bu...    Not Applicable   \n",
+       "\n",
+       "                                             job_title  \n",
+       "2                            Machine Learning Engineer  \n",
+       "3                  Machine Learning Engineer, Training  \n",
+       "4                            Machine Learning Engineer  \n",
+       "5        2025 Intern - Machine Learning Engineer AI/ML  \n",
+       "6    Data Scientist - Healthcare & Clinical Data (R...  \n",
+       "..                                                 ...  \n",
+       "992  Software Engineer, Computer Vision - Reality Labs  \n",
+       "993                                     Data Scientist  \n",
+       "994                          Software Engineer - React  \n",
+       "995                Machine Learning Engineer, Tapestry  \n",
+       "996                 Robotics Machine Learning Engineer  \n",
+       "\n",
+       "[995 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drop a row\n",
+    "df.drop(1, inplace= True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "02ba32c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_posted_date             object\n",
+       "company_address_locality    object\n",
+       "company_address_region      object\n",
+       "company_name                object\n",
+       "company_website             object\n",
+       "company_description         object\n",
+       "job_description_text        object\n",
+       "seniority_level             object\n",
+       "job_title                   object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "910cc8b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_posted_date</th>\n",
+       "      <th>company_address_locality</th>\n",
+       "      <th>company_address_region</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>company_website</th>\n",
+       "      <th>company_description</th>\n",
+       "      <th>job_description_text</th>\n",
+       "      <th>seniority_level</th>\n",
+       "      <th>job_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>995</td>\n",
+       "      <td>948</td>\n",
+       "      <td>882</td>\n",
+       "      <td>995</td>\n",
+       "      <td>981</td>\n",
+       "      <td>983</td>\n",
+       "      <td>994</td>\n",
+       "      <td>986</td>\n",
+       "      <td>995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>116</td>\n",
+       "      <td>178</td>\n",
+       "      <td>87</td>\n",
+       "      <td>486</td>\n",
+       "      <td>476</td>\n",
+       "      <td>478</td>\n",
+       "      <td>793</td>\n",
+       "      <td>7</td>\n",
+       "      <td>449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>2025-04-09</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>California</td>\n",
+       "      <td>TikTok</td>\n",
+       "      <td>https://www.tiktok.com/about?lang=en</td>\n",
+       "      <td>TikTok is the world's leading destination for ...</td>\n",
+       "      <td>Meta is embarking on the most transformative c...</td>\n",
+       "      <td>Mid-Senior level</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>87</td>\n",
+       "      <td>147</td>\n",
+       "      <td>307</td>\n",
+       "      <td>88</td>\n",
+       "      <td>88</td>\n",
+       "      <td>88</td>\n",
+       "      <td>12</td>\n",
+       "      <td>370</td>\n",
+       "      <td>242</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       job_posted_date company_address_locality company_address_region  \\\n",
+       "count              995                      948                    882   \n",
+       "unique             116                      178                     87   \n",
+       "top         2025-04-09            San Francisco             California   \n",
+       "freq                87                      147                    307   \n",
+       "\n",
+       "       company_name                       company_website  \\\n",
+       "count           995                                   981   \n",
+       "unique          486                                   476   \n",
+       "top          TikTok  https://www.tiktok.com/about?lang=en   \n",
+       "freq             88                                    88   \n",
+       "\n",
+       "                                      company_description  \\\n",
+       "count                                                 983   \n",
+       "unique                                                478   \n",
+       "top     TikTok is the world's leading destination for ...   \n",
+       "freq                                                   88   \n",
+       "\n",
+       "                                     job_description_text   seniority_level  \\\n",
+       "count                                                 994               986   \n",
+       "unique                                                793                 7   \n",
+       "top     Meta is embarking on the most transformative c...  Mid-Senior level   \n",
+       "freq                                                   12               370   \n",
+       "\n",
+       "                        job_title  \n",
+       "count                         995  \n",
+       "unique                        449  \n",
+       "top     Machine Learning Engineer  \n",
+       "freq                          242  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27874e0a",
    "metadata": {},
    "outputs": [],
    "source": []
