--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -827,28 +827,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 74,
    "id": "e142bbd5",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4.3, 5.3]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "a    1.0\n",
-       "b    2.0\n",
-       "c    3.0\n",
-       "d    NaN\n",
-       "e    NaN\n",
-       "dtype: float64"
+       "a    {'name': 'Sam', 'age': 25, 'city': 'new jersey'}\n",
+       "b    {'name': 'Sam', 'age': 25, 'city': 'new jersey'}\n",
+       "c    {'name': 'Sam', 'age': 25, 'city': 'new jersey'}\n",
+       "d    {'name': 'Sam', 'age': 25, 'city': 'new jersey'}\n",
+       "e    {'name': 'Sam', 'age': 25, 'city': 'new jersey'}\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "arr = [1,2,3,4.3,5.3]\n",
+    "print(arr[-3:])\n",
     "ind = ['a', 'b', 'c', 'd', 'e']\n",
     "pd.Series(data, index = ind)"
    ]
