--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -1678,8 +1678,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "27874e0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_posted_date               0\n",
+       "company_address_locality     47\n",
+       "company_address_region      113\n",
+       "company_name                  0\n",
+       "company_website              14\n",
+       "company_description          12\n",
+       "job_description_text          1\n",
+       "seniority_level               9\n",
+       "job_title                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7a49c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_posted_date               0\n",
+       "company_address_locality     47\n",
+       "company_address_region      113\n",
+       "company_name                  0\n",
+       "company_website              14\n",
+       "company_description          12\n",
+       "job_description_text          0\n",
+       "seniority_level               8\n",
+       "job_title                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dropna(subset=['job_description_text'], inplace=True) # for a specific column\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "1600b57d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_posted_date             object\n",
+       "company_address_locality    object\n",
+       "company_address_region      object\n",
+       "company_name                object\n",
+       "company_website             object\n",
+       "company_description         object\n",
+       "job_description_text        object\n",
+       "seniority_level             object\n",
+       "job_title                   object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "6ee15678",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['job_posted_date', 'company_address_locality', 'company_address_region',\n",
+       "       'company_name', 'company_website', 'company_description',\n",
+       "       'job_description_text', 'seniority_level', 'job_title'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "c3a627ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>job_posted_date</th>\n",
+       "      <th>company_location</th>\n",
+       "      <th>company_address_region</th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>company_website</th>\n",
+       "      <th>company_description</th>\n",
+       "      <th>job_description_text</th>\n",
+       "      <th>seniority_level</th>\n",
+       "      <th>job_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-04-09</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Adobe</td>\n",
+       "      <td>http://www.adobe.com</td>\n",
+       "      <td>Adobe is the global leader in digital media an...</td>\n",
+       "      <td>Our CompanyChanging the world through digital ...</td>\n",
+       "      <td>Entry level</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-03-22</td>\n",
+       "      <td>Mountain View</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Waymo</td>\n",
+       "      <td>https://waymo.com/careers/</td>\n",
+       "      <td>On the journey to be the world's most trusted ...</td>\n",
+       "      <td>Waymo is an autonomous driving technology comp...</td>\n",
+       "      <td>Entry level</td>\n",
+       "      <td>Machine Learning Engineer, Training</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-03-28</td>\n",
+       "      <td>Boston</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>HMH</td>\n",
+       "      <td>http://www.hmhco.com</td>\n",
+       "      <td>We are an adaptive learning company that empow...</td>\n",
+       "      <td>Job Title: Machine Learning EngineerLocation: ...</td>\n",
+       "      <td>Mid-Senior level</td>\n",
+       "      <td>Machine Learning Engineer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2025-04-02</td>\n",
+       "      <td>San Jose</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Adobe</td>\n",
+       "      <td>http://www.adobe.com</td>\n",
+       "      <td>Adobe is the global leader in digital media an...</td>\n",
+       "      <td>Our CompanyChanging the world through digital ...</td>\n",
+       "      <td>Internship</td>\n",
+       "      <td>2025 Intern - Machine Learning Engineer AI/ML</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2025-03-25</td>\n",
+       "      <td>Deerfield</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Walgreens</td>\n",
+       "      <td>http://www.walgreens.com</td>\n",
+       "      <td>Walgreens (www.walgreens.com) is included in t...</td>\n",
+       "      <td>Job SummaryApplies advanced data analysis tool...</td>\n",
+       "      <td>Not Applicable</td>\n",
+       "      <td>Data Scientist - Healthcare &amp; Clinical Data (R...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  job_posted_date company_location company_address_region company_name  \\\n",
+       "2      2025-04-09         San Jose                     CA        Adobe   \n",
+       "3      2025-03-22    Mountain View             California        Waymo   \n",
+       "4      2025-03-28           Boston          Massachusetts          HMH   \n",
+       "5      2025-04-02         San Jose                     CA        Adobe   \n",
+       "6      2025-03-25        Deerfield                     IL    Walgreens   \n",
+       "\n",
+       "              company_website  \\\n",
+       "2        http://www.adobe.com   \n",
+       "3  https://waymo.com/careers/   \n",
+       "4        http://www.hmhco.com   \n",
+       "5        http://www.adobe.com   \n",
+       "6    http://www.walgreens.com   \n",
+       "\n",
+       "                                 company_description  \\\n",
+       "2  Adobe is the global leader in digital media an...   \n",
+       "3  On the journey to be the world's most trusted ...   \n",
+       "4  We are an adaptive learning company that empow...   \n",
+       "5  Adobe is the global leader in digital media an...   \n",
+       "6  Walgreens (www.walgreens.com) is included in t...   \n",
+       "\n",
+       "                                job_description_text   seniority_level  \\\n",
+       "2  Our CompanyChanging the world through digital ...       Entry level   \n",
+       "3  Waymo is an autonomous driving technology comp...       Entry level   \n",
+       "4  Job Title: Machine Learning EngineerLocation: ...  Mid-Senior level   \n",
+       "5  Our CompanyChanging the world through digital ...        Internship   \n",
+       "6  Job SummaryApplies advanced data analysis tool...    Not Applicable   \n",
+       "\n",
+       "                                           job_title  \n",
+       "2                          Machine Learning Engineer  \n",
+       "3                Machine Learning Engineer, Training  \n",
+       "4                          Machine Learning Engineer  \n",
+       "5      2025 Intern - Machine Learning Engineer AI/ML  \n",
+       "6  Data Scientist - Healthcare & Clinical Data (R...  "
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# renaming columns\n",
+    "df = df.rename(columns={'company_address_locality' : 'company_location'})\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "c8477619",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "job_posted_date           object\n",
+       "company_location          object\n",
+       "company_address_region    object\n",
+       "company_name              object\n",
+       "company_website           object\n",
+       "company_description       object\n",
+       "job_description_text      object\n",
+       "seniority_level           object\n",
+       "job_title                 object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# changing data types\n",
+    "df.dtypes\n",
+    "# df['new_column'] = df['column'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffad032c",
    "metadata": {},
    "outputs": [],
    "source": []
