Create table, insert data and query

--- a/Python_for_data_science/sqlite.ipynb
+++ b/Python_for_data_science/sqlite.ipynb
@@ -60,8 +60,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "db6588fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f9dbc0feb90>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute(''' \n",
+    "    select * from employees\n",
+    "    ''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "90bce056",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert data into the table\n",
+    "cursor.execute('''\n",
+    "Insert Into employees(name,age, department)\n",
+    "               values('Dancan', 28, 'Devops team')\n",
+    "''')\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "aabd53df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Annestar', 32, 'Data team')\n",
+      "(2, 'Brian', 23, 'Operations team')\n",
+      "(3, 'Charles', 28, 'Sales team')\n",
+      "(4, 'Dancan', 28, 'Devops team')\n",
+      "(5, 'Dancan', 28, 'Devops team')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# query data\n",
+    "cursor.execute('select * from employees')\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65abe8d3",
    "metadata": {},
    "outputs": [],
    "source": []
