--- a/Python_for_data_science/sqlite.ipynb
+++ b/Python_for_data_science/sqlite.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "aabd53df",
    "metadata": {},
    "outputs": [
@@ -109,9 +109,7 @@
      "text": [
       "(1, 'Annestar', 34, 'Data team')\n",
       "(2, 'Brian', 23, 'Operations team')\n",
-      "(3, 'Charles', 28, 'Sales team')\n",
-      "(4, 'Dancan', 28, 'Devops team')\n",
-      "(5, 'Dancan', 28, 'Devops team')\n"
+      "(3, 'Charles', 28, 'Sales team')\n"
      ]
     }
    ],
@@ -143,8 +141,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "304b2d27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete data from the table\n",
+    "cursor.execute('''\n",
+    "Delete from employees\n",
+    "where name = 'Dancan'\n",
+    "''')\n",
+    "\n",
+    "connection.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aaa5003",
    "metadata": {},
    "outputs": [],
    "source": []
