insert data in bulk

--- a/Python_for_data_science/sqlite.ipynb
+++ b/Python_for_data_science/sqlite.ipynb
@@ -157,8 +157,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "4aaa5003",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f9daed0bf10>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sales Data\n",
+    "connection = sqlite3.connect('sales_data.db')\n",
+    "cursor = connection.cursor()\n",
+    "\n",
+    "cursor.execute('''\n",
+    "CREATE TABLE IF NOT EXISTS sales(\n",
+    "    id INTEGER PRIMARY KEY,\n",
+    "    data TEXT NOT NULL,\n",
+    "    product TEXT NOT NULL,\n",
+    "    sales INTEGER,\n",
+    "    region TEXT\n",
+    "    )\n",
+    "\n",
+    "''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "73883048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert data\n",
+    "sales_data = [\n",
+    "    ('2023-01-01', 'Laptops', 4394729, 'North America'),\n",
+    "    ('2023-01-01', 'Ipads', 2394789, 'South America'),\n",
+    "    ('2023-09-01', 'Tablets', 734298, ' Asia'),\n",
+    "    ('2023-01-01', 'Phones', 24895279, 'Europe'),\n",
+    "    ('2023-01-08', 'Earphones', 2743008, 'Africa'),\n",
+    "    ('2024-01-01', 'Monitors', 34729972, 'Central America')\n",
+    "]\n",
+    "\n",
+    "cursor.executemany('''\n",
+    "    INSERT INTO sales(data, product, sales, region)\n",
+    "    values(?,?,?,?)\n",
+    "    ''', sales_data)\n",
+    "\n",
+    "connection.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "89704fd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, '2023-01-01', 'Laptops', 4394729, 'North America')\n",
+      "(2, '2023-01-01', 'Ipads', 2394789, 'South America')\n",
+      "(3, '2023-09-01', 'Tablets', 734298, ' Asia')\n",
+      "(4, '2023-01-01', 'Phones', 24895279, 'Europe')\n",
+      "(5, '2023-01-08', 'Earphones', 2743008, 'Africa')\n",
+      "(6, '2024-01-01', 'Monitors', 34729972, 'Central America')\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute('''\n",
+    "    SELECT * FROM sales\n",
+    "''')\n",
+    "rows = cursor.fetchall()\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb80b49e",
    "metadata": {},
    "outputs": [],
    "source": []
