--- a/Python_for_data_science/sqlite.ipynb
+++ b/Python_for_data_science/sqlite.ipynb
@@ -244,8 +244,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "cb80b49e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# close connection\n",
+    "connection.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57803740",
    "metadata": {},
    "outputs": [],
    "source": []
