logging in python

--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -2304,6 +2304,39 @@
    "execution_count": null,
    "id": "7a6afd2f",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:This is a debug message\n",
+      "INFO:root:This is a info message\n",
+      "WARNING:root:This is a warning message\n",
+      "ERROR:root:This is an error message\n",
+      "CRITICAL:root:This is a critical message\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Logging in python\n",
+    "import logging\n",
+    "\n",
+    "# configure the basic logging settings\n",
+    "logging.basicConfig(level=logging.DEBUG)\n",
+    "\n",
+    "# Log messages in different severity settings\n",
+    "logging.debug(\"This is a debug message\") # typically of interest when diagnosing  problem\n",
+    "logging.info(\"This is a info message\") # things are working as expected\n",
+    "logging.warning(\"This is a warning message\") #  indication that something unexpected happened\n",
+    "logging.error(\"This is an error message\") # due to a more serious problem, system is not able to perform some function\n",
+    "logging.critical(\"This is a critical message\") # a very serios error, indicating that the program itself may be unable to continue running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c541fa26",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
