logging in python

--- a/Python_for_data_science/python.ipynb
+++ b/Python_for_data_science/python.ipynb
@@ -2334,8 +2334,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c541fa26",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log file written to: /home/wanyua/Dev/ML/Python-Machine-Learning-Tutorial/Python_for_data_science/app.log\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "import os\n",
+    "\n",
+    "# Reset handlers if already configured\n",
+    "for handler in logging.root.handlers[:]:\n",
+    "    logging.root.removeHandler(handler)\n",
+    "\n",
+    "# Configure logging\n",
+    "logging.basicConfig(\n",
+    "    filename='app.log',\n",
+    "    filemode='w',\n",
+    "    level=logging.DEBUG,\n",
+    "    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
+    "    datefmt='%Y-%m-%d %H:%M:%S'\n",
+    ")\n",
+    "\n",
+    "# Log messages\n",
+    "logging.debug(\"This is a debug message\")\n",
+    "logging.info(\"This is an info message\")\n",
+    "logging.warning(\"This is a warning message\")\n",
+    "logging.error(\"This is an error message\")\n",
+    "logging.critical(\"This is a critical message\")\n",
+    "\n",
+    "print(\"Log file written to:\", os.path.abspath(\"app.log\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1ae9f1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "359ae99f",
    "metadata": {},
    "outputs": [],
    "source": []
